# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# Soliloquy Board Drivers for Radxa Cubie A5E (Allwinner A527)
# ARM64 Cortex-A55 + Mali-G57 GPU

import("//build/board.gni")
import("//build/components.gni")
import("//build/drivers.gni")

# ============================================================================
# Board Configuration
# ============================================================================

board_configuration("soliloquy") {
  name = "soliloquy"
  
  provided_features = [
    "fuchsia::arm64",
    "fuchsia::mali_gpu",
    "fuchsia::allwinner_soc",
    "fuchsia::sdio_wifi",
    "fuchsia::touchscreen",
    "fuchsia::mmc_storage",
  ]
  
  filesystems = {
    # BlobFS for immutable package content
    blobfs = {
      maximum_bytes = 2147483648  # 2GB
    }
    # F2FS for mutable data (flash-friendly)
    data = {
      data_filesystem_format = "f2fs"
    }
  }
  
  # Hardware configuration
  hardware_info = {
    name = "Radxa Cubie A5E"
    vendor_name = "Radxa"
    product_name = "Cubie A5E"
    cpu_architecture = "arm64"
  }
}

# ============================================================================
# Platform Board Driver (main driver)
# ============================================================================

fuchsia_driver("soliloquy-platform-driver") {
  output_name = "soliloquy-platform"
  sources = [
    "src/soliloquy.cc",
    "src/soliloquy.h",
  ]
  deps = [
    "//sdk/banjo/fuchsia.hardware.platform.bus:fuchsia.hardware.platform.bus_banjo_cpp",
    "//sdk/fidl/fuchsia.hardware.platform.bus:fuchsia.hardware.platform.bus_cpp",
    "//src/devices/lib/driver",
    "//src/devices/lib/driver:driver_runtime",
    "//src/lib/ddk",
    "//src/lib/ddktl",
    "//zircon/system/ulib/fbl",
    "//zircon/system/ulib/sync",
    "//zircon/system/ulib/zx",
  ]
}

fuchsia_driver_component("soliloquy-platform") {
  component_name = "soliloquy-platform"
  deps = [ ":soliloquy-platform-driver" ]
  info = "soliloquy-platform-info.json"
  manifest = "meta/soliloquy-platform.cml"
}

# ============================================================================
# GPIO Driver (Allwinner A527 GPIO)
# ============================================================================

fuchsia_driver("soliloquy-gpio-driver") {
  output_name = "soliloquy-gpio"
  sources = [
    "src/soliloquy-gpio.cc",
  ]
  deps = [
    "//sdk/banjo/fuchsia.hardware.gpio:fuchsia.hardware.gpio_banjo_cpp",
    "//sdk/banjo/fuchsia.hardware.gpioimpl:fuchsia.hardware.gpioimpl_banjo_cpp",
    "//sdk/fidl/fuchsia.hardware.gpio:fuchsia.hardware.gpio_cpp",
    "//src/devices/lib/driver",
    "//src/devices/lib/mmio",
    "//src/lib/ddk",
    "//src/lib/ddktl",
    "//zircon/system/ulib/fbl",
    "//zircon/system/ulib/zx",
  ]
}

fuchsia_driver_component("soliloquy-gpio") {
  component_name = "soliloquy-gpio"
  deps = [ ":soliloquy-gpio-driver" ]
  info = "soliloquy-gpio-info.json"
  manifest = "meta/soliloquy-gpio.cml"
}

# ============================================================================
# SDIO Driver (for WiFi and SD card)
# ============================================================================

fuchsia_driver("soliloquy-sdio-driver") {
  output_name = "soliloquy-sdio"
  sources = [
    "src/soliloquy-sdio.cc",
  ]
  deps = [
    "//sdk/banjo/fuchsia.hardware.sdio:fuchsia.hardware.sdio_banjo_cpp",
    "//sdk/fidl/fuchsia.hardware.sdio:fuchsia.hardware.sdio_cpp",
    "//src/devices/lib/driver",
    "//src/devices/lib/mmio",
    "//src/lib/ddk",
    "//src/lib/ddktl",
    "//zircon/system/ulib/fbl",
    "//zircon/system/ulib/sync",
    "//zircon/system/ulib/zx",
  ]
}

fuchsia_driver_component("soliloquy-sdio") {
  component_name = "soliloquy-sdio"
  deps = [ ":soliloquy-sdio-driver" ]
  info = "soliloquy-sdio-info.json"
  manifest = "meta/soliloquy-sdio.cml"
}

# ============================================================================
# Ethernet Driver (Allwinner EMAC)
# ============================================================================

fuchsia_driver("soliloquy-ethernet-driver") {
  output_name = "soliloquy-ethernet"
  sources = [
    "src/soliloquy-ethernet.cc",
  ]
  deps = [
    "//sdk/banjo/fuchsia.hardware.ethernet:fuchsia.hardware.ethernet_banjo_cpp",
    "//sdk/fidl/fuchsia.hardware.network:fuchsia.hardware.network_cpp",
    "//src/connectivity/ethernet/lib/ethernet",
    "//src/devices/lib/driver",
    "//src/devices/lib/mmio",
    "//src/lib/ddk",
    "//src/lib/ddktl",
    "//zircon/system/ulib/fbl",
    "//zircon/system/ulib/sync",
    "//zircon/system/ulib/zx",
  ]
}

fuchsia_driver_component("soliloquy-ethernet") {
  component_name = "soliloquy-ethernet"
  deps = [ ":soliloquy-ethernet-driver" ]
  info = "soliloquy-ethernet-info.json"
  manifest = "meta/soliloquy-ethernet.cml"
}

# ============================================================================
# Display Driver (Allwinner DE3.0 / DRM)
# ============================================================================

fuchsia_driver("soliloquy-display-driver") {
  output_name = "soliloquy-display"
  sources = [
    "src/soliloquy-display.cc",
  ]
  deps = [
    "//sdk/banjo/fuchsia.hardware.display.controller:fuchsia.hardware.display.controller_banjo_cpp",
    "//sdk/fidl/fuchsia.hardware.display:fuchsia.hardware.display_cpp",
    "//sdk/fidl/fuchsia.hardware.display.types:fuchsia.hardware.display.types_cpp",
    "//src/devices/lib/driver",
    "//src/devices/lib/mmio",
    "//src/graphics/display/lib/api-types-cpp",
    "//src/lib/ddk",
    "//src/lib/ddktl",
    "//zircon/system/ulib/fbl",
    "//zircon/system/ulib/sync",
    "//zircon/system/ulib/zx",
  ]
}

fuchsia_driver_component("soliloquy-display") {
  component_name = "soliloquy-display"
  deps = [ ":soliloquy-display-driver" ]
  info = "soliloquy-display-info.json"
  manifest = "meta/soliloquy-display.cml"
}

# ============================================================================
# MMC Driver (eMMC/SD storage)
# ============================================================================

fuchsia_driver("soliloquy-mmc-driver") {
  output_name = "soliloquy-mmc"
  sources = [
    "src/soliloquy-mmc.cc",
  ]
  deps = [
    "//sdk/banjo/fuchsia.hardware.block:fuchsia.hardware.block_banjo_cpp",
    "//sdk/banjo/fuchsia.hardware.sdmmc:fuchsia.hardware.sdmmc_banjo_cpp",
    "//sdk/fidl/fuchsia.hardware.block:fuchsia.hardware.block_cpp",
    "//src/devices/block/lib/common",
    "//src/devices/lib/driver",
    "//src/devices/lib/mmio",
    "//src/lib/ddk",
    "//src/lib/ddktl",
    "//zircon/system/ulib/fbl",
    "//zircon/system/ulib/sync",
    "//zircon/system/ulib/zx",
  ]
}

fuchsia_driver_component("soliloquy-mmc") {
  component_name = "soliloquy-mmc"
  deps = [ ":soliloquy-mmc-driver" ]
  info = "soliloquy-mmc-info.json"
  manifest = "meta/soliloquy-mmc.cml"
}

# ============================================================================
# HID Input Driver (touch + buttons)
# ============================================================================

fuchsia_driver("soliloquy-hid-driver") {
  output_name = "soliloquy-hid"
  sources = [
    "src/soliloquy-hid.cc",
  ]
  deps = [
    "//sdk/banjo/fuchsia.hardware.hidbus:fuchsia.hardware.hidbus_banjo_cpp",
    "//sdk/fidl/fuchsia.input.report:fuchsia.input.report_cpp",
    "//src/devices/lib/driver",
    "//src/lib/ddk",
    "//src/lib/ddktl",
    "//src/ui/input/lib/input-report-reader",
    "//zircon/system/ulib/fbl",
    "//zircon/system/ulib/hid",
    "//zircon/system/ulib/sync",
    "//zircon/system/ulib/zx",
  ]
}

fuchsia_driver_component("soliloquy-hid") {
  component_name = "soliloquy-hid"
  deps = [ ":soliloquy-hid-driver" ]
  info = "soliloquy-hid-info.json"
  manifest = "meta/soliloquy-hid.cml"
}

# ============================================================================
# Driver Packages
# ============================================================================

fuchsia_package("mmc-driver") {
  package_name = "soliloquy-mmc"
  deps = [ ":soliloquy-mmc" ]
}

fuchsia_package("ethernet-driver") {
  package_name = "soliloquy-ethernet"
  deps = [ ":soliloquy-ethernet" ]
}

fuchsia_package("display-driver") {
  package_name = "soliloquy-display"
  deps = [ ":soliloquy-display" ]
}

fuchsia_package("gpio-driver") {
  package_name = "soliloquy-gpio"
  deps = [ ":soliloquy-gpio" ]
}

fuchsia_package("sdio-driver") {
  package_name = "soliloquy-sdio"
  deps = [ ":soliloquy-sdio" ]
}

fuchsia_package("hid-driver") {
  package_name = "soliloquy-hid"
  deps = [ ":soliloquy-hid" ]
}

fuchsia_package("platform-driver") {
  package_name = "soliloquy-platform"
  deps = [ ":soliloquy-platform" ]
}

# ============================================================================
# Driver Bundle (all drivers in one package)
# ============================================================================

fuchsia_package("soliloquy-drivers") {
  package_name = "soliloquy-drivers"
  deps = [
    ":soliloquy-display",
    ":soliloquy-ethernet",
    ":soliloquy-gpio",
    ":soliloquy-hid",
    ":soliloquy-mmc",
    ":soliloquy-platform",
    ":soliloquy-sdio",
  ]
}

# ============================================================================
# Groups for Build Targets
# ============================================================================

group("soliloquy") {
  testonly = true
  deps = [
    ":soliloquy-drivers",
    "//drivers/wifi/aic8800:aic8800",
  ]
}

group("drivers") {
  testonly = true
  deps = [
    ":display-driver",
    ":ethernet-driver",
    ":gpio-driver",
    ":hid-driver",
    ":mmc-driver",
    ":platform-driver",
    ":sdio-driver",
    "//drivers/wifi/aic8800:aic8800",
  ]
}

group("tests") {
  testonly = true
  deps = [
    "//boards/arm64/soliloquy/tests",
  ]
}
