# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# Hardware topology for Radxa Cubie A5E (Allwinner A527)
# This file defines the hardware configuration that the kernel and drivers use.

import("//build/board.gni")
import("//products/soliloquy.arm64.gni")

declare_args() {
  # Board-specific arguments
  
  # Enable/disable WiFi driver
  soliloquy_enable_wifi = true
  
  # Enable/disable display driver
  soliloquy_enable_display = true
  
  # Use software rendering (no GPU acceleration)
  soliloquy_software_rendering = true
  
  # Enable debug UART output
  soliloquy_debug_uart = true
  
  # eMMC vs SD boot
  soliloquy_boot_device = "emmc"  # or "sd"
}

# ============================================================================
# Board Configuration
# ============================================================================

board_name = "soliloquy"
board_description = "Radxa Cubie A5E (Allwinner A527)"

# SoC Configuration
soc_vendor = "Allwinner"
soc_model = "A527"
soc_family = "sun55i"

# ============================================================================
# CPU Configuration
# ============================================================================

# Allwinner A527: 4x Cortex-A55 @ 1.8GHz
cpu_arch = "arm64"
cpu_cores = 4
cpu_model = "cortex-a55"
cpu_max_freq_mhz = 1800

# ============================================================================
# Memory Configuration
# ============================================================================

# 2-4GB LPDDR4X depending on SKU
ram_size_mb = 4096
ram_type = "lpddr4x"

# Memory-mapped I/O regions
mmio_regions = [
  {
    name = "de3"
    base = "0x01000000"
    size = "0x400000"
    description = "Display Engine 3.0"
  },
  {
    name = "gpu"
    base = "0x01800000"
    size = "0x100000"
    description = "Mali-G57 GPU"
  },
  {
    name = "mmc0"
    base = "0x04020000"
    size = "0x1000"
    description = "SD/MMC Controller 0"
  },
  {
    name = "mmc2"
    base = "0x04022000"
    size = "0x1000"
    description = "eMMC Controller"
  },
  {
    name = "uart0"
    base = "0x02500000"
    size = "0x400"
    description = "Debug UART"
  },
  {
    name = "emac"
    base = "0x04500000"
    size = "0x10000"
    description = "Ethernet MAC"
  },
  {
    name = "sdio"
    base = "0x04021000"
    size = "0x1000"
    description = "SDIO for WiFi"
  },
]

# IRQ assignments
irq_assignments = {
  mmc0 = 72
  mmc2 = 74
  emac = 110
  sdio = 73
  uart0 = 32
  gpu = 142
  de3 = 147
}

# ============================================================================
# Peripheral Configuration
# ============================================================================

# WiFi: AIC8800D80 SDIO
has_wifi = true
wifi_chip = "aic8800"
wifi_interface = "sdio"
wifi_firmware = "fmacfw_8800d80.bin"

# Bluetooth: Disabled (not using)
has_bluetooth = false

# GPU: Mali-G57 MC1
has_gpu = true
gpu_model = "mali-g57"
gpu_variant = "mc1"

# Display: Allwinner DE3.0 + TCON
has_display = true
display_engine = "de3"
display_outputs = [ "hdmi", "dsi" ]

# Ethernet: Allwinner EMAC with RTL8211F PHY
has_ethernet = true
ethernet_phy = "rtl8211f"

# Storage
has_emmc = true
has_sd = true

# USB: 1x USB 2.0 OTG, 1x USB 3.0 Host
has_usb = true
usb_ports = [
  { type = "otg", version = "2.0" },
  { type = "host", version = "3.0" },
]

# ============================================================================
# Driver Package Configuration
# ============================================================================

soliloquy_platform_drivers = [
  "//boards/arm64/soliloquy:platform-driver",
  "//boards/arm64/soliloquy:gpio-driver",
]

soliloquy_storage_drivers = [
  "//boards/arm64/soliloquy:mmc-driver",
  "//boards/arm64/soliloquy:sdio-driver",
]

soliloquy_display_drivers = [
  "//boards/arm64/soliloquy:display-driver",
]

soliloquy_network_drivers = [
  "//boards/arm64/soliloquy:ethernet-driver",
  "//drivers/wifi/aic8800:aic8800",
]

soliloquy_input_drivers = [
  "//boards/arm64/soliloquy:hid-driver",
]

# All drivers for full product
soliloquy_all_drivers = 
    soliloquy_platform_drivers +
    soliloquy_storage_drivers +
    soliloquy_display_drivers +
    soliloquy_network_drivers +
    soliloquy_input_drivers

# Minimal drivers for headless mode
soliloquy_headless_drivers = 
    soliloquy_platform_drivers +
    soliloquy_storage_drivers +
    soliloquy_network_drivers

# ============================================================================
# Boot Configuration
# ============================================================================

# Kernel command line
kernel_cmdline = [
  "kernel.serial=legacy",
  "kernel.halt-on-panic=false",
  "devmgr.bind-eager=all",
  "driver_manager.driver_host_crash_policy=restart-driver-host",
]

# Debug kernel command line (development builds)
kernel_cmdline_debug = kernel_cmdline + [
  "kernel.enable-serial-syscalls=true",
  "kernel.bypass-debuglog=true",
]

# UART configuration
uart_base = "0x02500000"
uart_irq = 32
uart_clock = 24000000
uart_baud = 115200

# ============================================================================
# Power Management
# ============================================================================

# PMIC: AXP323
pmic_model = "axp323"
pmic_i2c_bus = 0
pmic_i2c_addr = "0x34"

# Voltage rails
voltage_rails = [
  { name = "vdd_cpu", min_mv = 900, max_mv = 1200, default_mv = 1100 },
  { name = "vdd_gpu", min_mv = 900, max_mv = 1100, default_mv = 1000 },
  { name = "vdd_sys", min_mv = 3300, max_mv = 3300, default_mv = 3300 },
]
