# Board-specific GN arguments
board_name = "soliloquy"
target_cpu = "arm64"

# Kernel command line arguments
# - kernel.serial=legacy: Enable legacy serial console
# - kernel.physmap=standard: Standard physical memory mapping
board_bootfs_labels = []
board_zedboot_labels = []
board_recovery_labels = []

# Board-specific drivers to include
board_driver_package_labels = [
  "//drivers/wifi/aic8800:aic8800",
  "//drivers/gpio/soliloquy_gpio:soliloquy_gpio",
  "//drivers/gpu/mali_g57:mali_g57",
]

# VM subsystem configuration
# Set to true to use V-translated VM components instead of C
use_v_vm = false

# Kernel VM dependencies
if (use_v_vm) {
  kernel_vm_deps = [ "//third_party/zircon_v/vm:zircon_v_vm" ]
} else {
  kernel_vm_deps = [ "//third_party/zircon_c/vm:zircon_c_vm" ]
}
