# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# Board configuration for Soliloquy OS on Radxa Cubie A5E
# This file is imported by the build system to configure board-specific settings.

import("//build/board.gni")
import("//boards/arm64/soliloquy/board.gni")

# ============================================================================
# Core Board Configuration
# ============================================================================

board_name = "soliloquy"
target_cpu = "arm64"
board_is_emu = false
board_is_phys = true

# Board metadata
board_vendor = "Radxa"
board_model = "Cubie A5E"
board_soc = "Allwinner A527"

# ============================================================================
# Bootfs Labels
# ============================================================================

# Components to include in bootfs (available before blobfs)
board_bootfs_labels = [
  # Core shell components
  "//src/shell:soliloquy_shell_launcher",
  
  # Early boot drivers
  "//boards/arm64/soliloquy:soliloquy-platform",
  "//boards/arm64/soliloquy:soliloquy-gpio",
  "//boards/arm64/soliloquy:soliloquy-mmc",
]

# Zedboot-specific components (recovery/paving mode)
board_zedboot_labels = [
  "//boards/arm64/soliloquy:soliloquy-platform",
  "//boards/arm64/soliloquy:soliloquy-mmc",
  "//boards/arm64/soliloquy:soliloquy-ethernet",
]

# Recovery-specific components
board_recovery_labels = board_zedboot_labels

# ============================================================================
# Driver Package Labels
# ============================================================================

# Board-specific drivers to include in the system
board_driver_package_labels = [
  # Platform drivers
  "//boards/arm64/soliloquy:platform-driver",
  "//boards/arm64/soliloquy:gpio-driver",
  
  # Storage drivers
  "//boards/arm64/soliloquy:mmc-driver",
  "//boards/arm64/soliloquy:sdio-driver",
  
  # Display drivers
  "//boards/arm64/soliloquy:display-driver",
  
  # Network drivers
  "//boards/arm64/soliloquy:ethernet-driver",
  "//drivers/wifi/aic8800:aic8800",
  
  # Input drivers
  "//boards/arm64/soliloquy:hid-driver",
]

# ============================================================================
# Kernel Configuration
# ============================================================================

# Kernel command line arguments
board_kernel_cmdline = [
  "kernel.serial=legacy",
  "kernel.halt-on-panic=false",
  "kernel.enable-serial-syscalls=true",
  "devmgr.bind-eager=all",
  "driver_manager.driver_host_crash_policy=restart-driver-host",
]

# Additional cmdline for development builds
board_kernel_cmdline_dev = board_kernel_cmdline + [
  "kernel.bypass-debuglog=true",
  "kernel.memory-limit-dbg=true",
]

# ============================================================================
# VM Subsystem Configuration
# ============================================================================

# Set to true to use V-translated VM components instead of C
use_v_vm = false

# Kernel VM dependencies
if (use_v_vm) {
  kernel_vm_deps = [ "//third_party/zircon_v/vm:zircon_v_vm" ]
} else {
  kernel_vm_deps = [ "//third_party/zircon_c/vm:zircon_c_vm" ]
}

# IPC configuration
use_v_ipc = false

if (use_v_ipc) {
  kernel_ipc_deps = [ "//third_party/zircon_v/ipc:zircon_v_ipc" ]
} else {
  kernel_ipc_deps = []
}

# ============================================================================
# Hardware Feature Flags
# ============================================================================

# These flags control which features are enabled
board_hardware_features = {
  # Display configuration
  has_display = true
  display_software_render = true  # No GPU driver yet
  
  # Input devices
  has_touchscreen = true
  has_buttons = true
  
  # Network
  has_ethernet = true
  has_wifi = true
  
  # Storage
  has_emmc = true
  has_sd = true
  
  # USB
  has_usb = true
  
  # Audio (disabled - not in minimal config)
  has_audio = false
  
  # Bluetooth (disabled)
  has_bluetooth = false
  
  # Camera (disabled)
  has_camera = false
}

# ============================================================================
# Firmware Paths
# ============================================================================

# WiFi firmware
aic8800_firmware_path = "//drivers/wifi/aic8800/firmware"

# GPU firmware (when GPU driver is ready)
mali_firmware_path = "//drivers/gpu/mali_g57/firmware"

# ============================================================================
# Test Configuration
# ============================================================================

# Additional packages for test builds
board_test_labels = [
  "//boards/arm64/soliloquy/tests:driver-tests",
  "//test/support:soliloquy_test_support",
]

# ============================================================================
# Assembly Configuration
# ============================================================================

# Product assembly configuration reference
board_assembly_config = "//products/soliloquy/BUILD.gn"

# Default product for this board
default_product = "soliloquy"

# Available products for this board
available_products = [
  "soliloquy",
  "soliloquy_headless",
  "soliloquy_with_tests",
]
