[package]
name = "soliloquy-build-core"
version = "0.1.0"
edition = "2021"
authors = ["Soliloquy OS Team"]
description = "Core build management library for Soliloquy OS"
license = "BSD-3-Clause"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
petgraph = "0.6"
glob = "0.3"
walkdir = "2.4"
notify = "6.1"
sha2 = "0.10"
hex = "0.4"
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"
which = "5.0"
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
