[package]
name = "soliloquy-build-cli"
version = "0.1.0"
edition = "2021"
authors = ["Soliloquy OS Team"]
description = "CLI tool for managing Soliloquy OS builds"
license = "BSD-3-Clause"

[[bin]]
name = "soliloquy-build"
path = "src/main.rs"

[dependencies]
soliloquy-build-core = { path = "../build_core" }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
serde_json = "1.0"
tabled = "0.15"
