# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# Device Tree Sources for Radxa Cubie A5E (Allwinner A527)

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "a527_dts",
    srcs = [
        "allwinner-a527.dts",
        "sun55i-a527-ccu.h",
    ],
)

# Device tree blob compilation would be done by host tools
# This just exports the sources
exports_files([
    "allwinner-a527.dts",
    "sun55i-a527-ccu.h",
])
