# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# U-Boot Configuration for Radxa Cubie A5E

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "uboot_config",
    srcs = [
        "cubie_a5e_defconfig",
        "boot.cmd",
    ],
)

exports_files([
    "cubie_a5e_defconfig",
    "boot.cmd",
    "README.md",
])
